--- a/cards.css
+++ b/cards.css
@@ -1,40 +1,14 @@
 
-#main {
-	overflow: hidden;
-	position: relative;
-	top: -3em;
-	left: 0%;
-	height: 500px;
-	margin: 0;
-	padding: 0;
-	font-family: 'Lustria', serif;
-}
-#main h1.large {
-	font-size: 8em;
-	color: #fff;
-	position: relative;
-	left: 10%;
-	width: 10.5em;
-}
-#main h3.byline {
-	font-size: 50px;
-	color: rgba(255, 255, 255, .7);
-	position: relative;
-	top: -26%;
-	left: 10.2%;
-	font-family: Arial, sans-serif;
-}
-
 
 #card-wrapper
 {
-    height: 150vh;
+	position: relative;
+	bottom: 15em;
 }
 
 
 .card
 {
-    width: 79.5%;
 	word-wrap: break-word;
 	font-size: 18px;
 	font-weight: 300;
@@ -57,6 +31,18 @@
 }
 
 
+.comfortable
+{
+	width: 79.5%;
+}
+
+
+.full
+{
+	width: 100%;
+}
+
+
 
 /* ---------------------------------------------------------------------------- */
 /* ---------------------------------------------------------------------------- */
@@ -71,7 +57,5 @@
 #index-card #main
 {
     overflow: visible;
-	top: -10em;
-    font-size: 50%;
     height: 1% !important;
 }
