--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ h5 {
 	border-radius: 2px;
 	background: #53350A;
 	/* Background */
+	stroke-width: 4.2px;
 	-webkit-stroke-width: 4.2px;
 	-webkit-stroke-color: #FFFFFF;
 	-webkit-fill-color: #FFFFFF;
@@ -492,7 +493,7 @@ h5 {
 		opacity: 1;
 	}
 }
-? #empty {
+#empty {
 	padding: 0;
 }
 
@@ -512,7 +513,6 @@ h5 {
 	padding: 0;
 	line-height: normal;
 	font-size: 14px;
-	text-transform: ;
 	text-align: center;
 	color: #555555;
 }
@@ -560,6 +560,14 @@ hr.gradient {
 	left: 65%;
 }
 
+.kiln_lumber
+{
+	width: 100%;
+	position: relative;
+	left: 50%;
+	top: -10%;
+}
+
 
 /* DIV table */
 .divTable{
@@ -579,6 +587,11 @@ hr.gradient {
 	padding: 3px 10px;
 	width: 50%;
 }
+.divTableCell_lesspadding {
+	display: table-cell;
+	padding: 1px 5px;
+	width: 50%;
+}
 .divTableHeading {
 	background-color: #EEE;
 	display: table-header-group;
@@ -593,4 +606,17 @@ hr.gradient {
 	display: table-row-group;
 }
 
+
+.multi-column {
+	-moz-column-count: 2;
+	-moz-column-gap: 20px;
+	-moz-column-fill: auto;
+	-webkit-column-count: 2;
+	-webkit-column-gap: 20px;
+	-webkit-column-fill: auto;
+	column-count: 2;
+	column-gap: 20px;
+	column-fill: auto;
+	list-style-position: inside;
+ }
 
