Fixed center problem on different screen res

--- a/style.css
+++ b/style.css
@@ -68,8 +68,6 @@ h5 {
 	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 #wrapper {
-	width: 1250px;
-	margin: 0 auto;
 	padding: 0;
 }
 
@@ -258,7 +256,7 @@ h5 {
 	border-style: solid;
 	border-color: rgba(200, 200, 200, 0.2);
 	border-radius: 2px;
-	margin: 0px 0px 0px 0px;
+	margin: auto;
 	background: #FFFFFF;
 }
 
